# grouped-task-manager

./: CLAUDE.md  CMakeLists.txt  README.md  backend.cpp  backend.h  colormanager.cpp  colormanager.h  main.xml  metadata.json
LICENSES/: GPL-2.0-or-later.txt
qml/: ContextMenu.qml  GroupDialog.qml  GroupHeader.qml  MouseHandler.qml  Task.qml  TaskList.qml  TaskProgressOverlay.qml  ToolTipInstance.qml  main.qml
